tests/valid_inputs/while.cpp

int main() {
	int i = 1, res = 0;
	while(i <= 4) {
		res = res+i;
		i = i+1;
	}
	return res;
}
