tests/invalid_inputs/sema/int_plus_equals_pointer.cpp

int main() {
	int i = 42, *p;
	i += p;
}
